2001-02-12  Robey Pointer  <robey@eazel.com>

	reviewed by: Eskil Heyn Olsen  <eskil@eazel.com>

	* src/nautilus-application.c: (nautilus_application_startup):

	Follow --quit's lead and avoid unref'ing to avoid hanging.
	
	* src/nautilus-shell.c: (restore_window_states):

	Don't double-free the list elements in the restored window list
	after restart.

2001-02-12  Robey Pointer  <robey@eazel.com>

	* components/services/install/lib/eazel-install-protocols.c:
	(gnome_vfs_fetch_remote_file):

	Erase the package if it didn't finish downloading.
	
	* components/services/trilobite/libtrilobite/trilobite-core-messagi
	ng.c:

	Add <string.h> header for RH7.
	
	* nautilus-installer/src/callbacks.c: (druid_cancel),
	(druid_delete), (druid_finish):
	* nautilus-installer/src/main.c: (main):

	Clean up object unref'ing to quiet up the install lib's memory
	checker.  Don't hook up with the session manager.
	
	* nautilus-installer/src/installer.c: (eazel_download_progress),
	(eazel_install_preflight), (check_system),
	(eazel_installer_finalize), (eazel_installer_set_default_texts),
	(eazel_installer_initialize):
	* nautilus-installer/src/installer.h:
	* nautilus-installer/src/link.sh:

	Change the no-RH7 message into RH6 and RH7 specific messages, so
	we can build one installer for each platform.  Don't ask to delete
	files if none were downloaded.
	
2001-02-12  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Darin Adler  <darin@eazel.com>

	* libnautilus-extensions/nautilus-gtk-extensions.h:
	* libnautilus-extensions/nautilus-gtk-extensions.c:
	(while_realized_disconnecter),
	(nautilus_gtk_signal_connect_while_realized):
	New function to connect to a signal of an object while a widget is
	realized.
	(while_realized_disconnecter): Changed signature to be void - no
	need to return a value here.  As such, the GTK_SIGNAL_FUNC casts
	are no longer needed.
	
	* libnautilus-extensions/nautilus-clickable-image.c:
	(nautilus_clickable_image_realize),